--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;600;700&display=swap');
+
 .App {
   text-align: center;
   /*background: green;*/
   display: flex;
   justify-content: center;
+  font-family: Inter, serif;
 }
 
 .App-logo {
