complete table styling and second card styling + convert some symbols to components

--- a/src/App.css
+++ b/src/App.css
@@ -64,63 +64,13 @@ table {
   outline: none;
 }
 
-/*.input-container {*/
-/*  border: 1px solid gray;*/
-/*  border-radius: 4px;*/
-/*  width: 250px;*/
-/*  height: 2rem;*/
-/*  position: relative;*/
-/*}*/
+/* some styling for chrome scrollbars */
+::-webkit-scrollbar {
+  height: 10px;
+  background: transparent;
+}
 
-/*.input-container input {*/
-/*  width: 100%;*/
-/*  border: none;*/
-/*  position: absolute;*/
-/*  inset: 0;*/
-/*  z-index: 1;*/
-/*  outline: none;*/
-/*  padding: 0 0.5rem;*/
-/*  font-size: 14px;*/
-/*  background: transparent;*/
-/*}*/
-
-/*!* For showing through placeholder *!*/
-/*.input-container input:not([value=""]) {*/
-/*  -webkit-text-fill-color: transparent;*/
-/*}*/
-
-/*.input-container .input-renderer {*/
-/*  font-size: 14px;*/
-/*  position: absolute;*/
-/*  inset: 0;*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  margin: 0 0.5rem;*/
-/*  !* This line preserves trailing*/
-/*      whitespaces *!*/
-/*  white-space: pre;*/
-
-/*  overflow-x: auto;*/
-/*  user-select: none;*/
-/*  scrollbar-width: none;*/
-/*}*/
-
-/*.input-container .input-renderer::-webkit-scrollbar {*/
-/*  display: none;*/
-/*}*/
-
-/*.green {*/
-/*  color: green;*/
-/*}*/
-
-/*body {*/
-/*  font-family: sans-serif;*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  justify-content: center;*/
-/*  height: 80vh;*/
-/*}*/
-
-/** {*/
-/*  box-sizing: border-box;*/
-/*}*/
+::-webkit-scrollbar-thumb {
+  background: #E8E8E8;
+  -webkit-border-radius: 1ex;
+}
