--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   text-align: center;
   /*background: green;*/
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   font-family: Inter, serif;
 }
 
